--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,6 @@
   volume = {27},
   number = {2},
   issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
   doi = {10.1093/comjnl/27.2.97},
   journal = {Comput. J.},
   month = may,
@@ -76,7 +75,7 @@
   journal = {Journal of Economics and Finance},
   volume = {27},
   pages = {75–84},
-  doi = {https://doi.org/10.1007/BF02751591}
+  doi = {10.1007/BF02751591}
 },
 @book{Hyndman2021,
   title = {Forecasting: principles and practice},
@@ -125,7 +124,7 @@
   day = {9},
   url = {https://www.businesswire.com/news/home/20220608006113/en/Gap-Inc.-Launches-New-Credit-Card-Program-in-Partnership-with-Barclays-and-Mastercard}
 },
-@website{cosco2016,
+@website{costco2016,
   title = {Citi Completes Acquisition and Conversion of Costco U.S. Co-Brand Card Portfolio},
   author = {Businesswire},
   year = {2016},
@@ -156,7 +155,7 @@
   year = {2021},
   month = {March},
   publisher = {Elsevier},
-  url = {https://doi.org/10.1016/j.eswa.2020.113954}
+  doi = {10.1016/j.eswa.2020.113954}
 },
 @book{HuntingtonKlein,
   title = {The Effect: An Introduction to Research Design and Causality},
@@ -165,6 +164,29 @@
   publisher = {CRC Press},
   url = {https://theeffectbook.net/}  
 },
-https://theeffectbook.net/
+@website{TCCP2022,
+  title = {The Terms of credit card plans (TCCP) survey},
+  author = {Consumer Financial Protection Bureau},
+  year = {2022},
+  url = {https://files.consumerfinance.gov/f/documents/cfpb_tccp-data_2022-07-01_2022_12-31.xlsx}
+},
+@website{naics,
+  title = {North American Industry Classification System (NAICS)},
+  author = {US Census Bureau},
+  year = {2024},
+  url = {https://www.census.gov/naics/}
+},
+@article{GHJ2001,
+  title = {Macroeconomic factors, consumer behavior, and bankcard default rates},
+  author = {Grieb, Terrance and Hegji, Charles and Jones, Steven T.},
+  journal = {Journal of Economics and Finance},
+  volume = {25},
+  number = {3},
+  year = {2001},
+  month = {September},
+  pages = {316–327},
+  publisher = {Springer},
+  doi = {10.1007/BF02755992}
+},
 
 #Hierarchical modeling and analysis for spatial data
