--- a/model_event.qmd
+++ b/model_event.qmd
@@ -1,338 +1,448 @@
 ---
-title: "ARIMA"
+title: "Event study"
 format: html
 ---
 
-to 
-Our target data is the *`r credit_card.target_label()`* crucial because trends and seasonal patterns can obscure the true impact of the event
-For an observation we start with the assumption that it is a constitutent of: Trend + Seasonality + Portfolio 
+Event studies are a common approach in econometrics to assess the impact of an event such as earnings announcements, mergers and acquisitions, regulatory changes, or macroeconomic news.
 
-Portfolio is used to explain the individual Bank level credit card business decisions. 
+The goal is to estimate the portion of post-event change that can be attributed to the event itself, isolating it from other market and firm-specific effects. We do this by predicting what would have happened if the event had not occurred (the counterfactual) and comparing it to the actual observed data to estimate the resulting "abnormal returns" (AR).
 
+To determine the normal return we can adopt the market model [@MacKinlay1997]
+$$
+D_{it} = \alpha_i + \beta_i D_{gt} + \epsilon_{it}
+$$
 
-Below approaches to filter out the Trend and Seasonality
-1. Use the BankType group mean or median
-2. "bottom-up" approach. Determining the Trend and Seasonality at a Bank individual level, and then summing these to the group.
+And the AR is 
+$$
+AR_{it} = D_{it} – (\alpha_i + \beta_i D_{gt})
+$$
 
+Where:
+
+$D_{it}$ is *`r credit_card.target_label()`* (differenced) $i$ at time $t$,
+$\alpha_i$ is the firm-specific *`r credit_card.target_label()`* (differenced),
+$\beta_i$ is the sensitivity of firm value $i$ to the group $g$,
+$D_{gt}$ is the group *`r credit_card.target_label()`* (differenced) at time $t$, and
+$\varepsilon_{it}$ is the error term for $i$ at time $t$.
+
+## Evaluation
+
+The joint test problem arises because we are effectively testing two things: the counterfactual model and the event impact. Consequently, we need an approach to accurately evaluate if our counterfactual model results are credible. One approach is to test using observations where we expect no effect; if there were resulting "abnormal returns" this would point to an issue with the model [see @HuntingtonKlein, chap 17.3.3]. 
 
 ```{r}
+library(lme4)
+library(caret)
+library(Metrics)
+
 source('functions.R')
+
+run_timeseries_cv <- function(data, formula_string, model_func = lm, predict_func= predict, initial_window = 9, horizon = 1, dependent_var = "value_diff", fixedWindow = TRUE) {
+    set.seed(123)  # For reproducibility
+    # Create 5-fold cross-validation indices
+    slices <- caret::createTimeSlices(1:nrow(data), initial_window, horizon, fixedWindow = fixedWindow)
+    results <- list()
+
+    for(i in 1:length(slices$train)) {
+        # Extract training and testing data using the indices
+        training_indices <- slices$train[[i]]
+        validation_indices <- slices$test[[i]]
+        training_set <- data |> filter(Quarter %in% data$Quarter[training_indices])
+        validation_set <- data |> filter(Quarter %in% data$Quarter[validation_indices])
+
+        # Skip if validation set contains FirmID levels not present in training set
+        if(any(!(validation_set$IDRSSD %in% training_set$IDRSSD))) {
+          next
+        }
+        # Fit model on the training data
+        model <- model_func(formula_string, data = training_set)
+
+        # Predict on the validation data
+        predictions <- predict_func(model, newdata = validation_set)
+        
+        # Evaluate the model (you can choose your evaluation metric, e.g., RMSE)
+        rmse_value <- Metrics::rmse(validation_set[[dependent_var]], predictions)
+
+        # Store the results
+        results[[i]] <- rmse_value
+    }
+
+    # Calculate the average performance across all slices
+    average_performance <- mean(unlist(results))
+    average_performance
+}
+
+# run_timeseries_cv_multiple_firms <- function(data, formula_string, model_func = lm, predict_func= predict, initial_window = 3, horizon = 1, dependent_var = "value_diff") {
+#     # Split the data by firm
+#     firm_data_list <- split(data, data$IDRSSD)
+
+#     # Perform cross-validation for each firm and calculate mean RMSE per firm
+#     cv_results <- map(firm_data_list, ~time_series_cv_per_firm(.x, formula_string, model_func, predict_func, initial_window, horizon, dependent_var)) |>
+#                   map_df(~mutate(.x, MeanRMSE = mean(RMSE)), .id = "IDRSSD")
+
+#     # Calculate the overall mean RMSE across all firms
+#     overall_mean_rmse <- mean(cv_results$MeanRMSE)
+
+#     return(list(PerFirmRMSE = cv_results, OverallMeanRMSE = overall_mean_rmse))
+# }
+
+
+# time_series_cv_per_firm <- function(data, formula_string, model_func=lm, predict_func = predict, initial_window = 3, horizon = 1, dependent_var = "value_diff") {
+#   total_points <- nrow(data)
+#   results <- tibble()
+
+#   for (start_idx in 1:(total_points - initial_window - horizon + 1)) {
+#     end_idx <- start_idx + initial_window - 1 + horizon
+#     if (end_idx > total_points) {
+#       break
+#     }
+
+#     training_set <- data[start_idx:(end_idx - horizon), ]
+#     validation_set <- data[(end_idx - horizon + 1):end_idx, ]
+
+#     model <- model_func(formula_string, data = training_set)
+#     validation_preds <- predict_func(model, newdata = validation_set)
+
+#     rmse_value <- Metrics::rmse(validation_set[[dependent_var]], validation_preds)
+
+#     results <- rbind(results, tibble(Start = start_idx, RMSE = rmse_value))
+#   }
+
+#   return(results)
+# }
+
+run_kfold_validation <- function(data, formula_string,model_func = lm, predict_func= predict) {
+    set.seed(123)  # For reproducibility
+    folds <- createFolds(data$IDRSSD, k = 5)
+    results <- data.frame()  # Data frame to store results
+    formula <- as.formula(formula_string)
+
+    for(i in 1:length(folds)) {
+        # Split the data into training and validation sets
+        training_set <- data[-folds[[i]], ]
+        validation_set <- data[folds[[i]], ]
+        
+        model <- model_func(formula, data = training_set)
+        # Predict on the validation set
+        validation_preds <- predict_func(model, newdata = validation_set)
+
+        # Evaluate the model (using an appropriate metric like RMSE)
+        rmse_value <- Metrics::rmse(validation_set$value_diff, validation_preds)
+
+        # Store the results
+        results <- rbind(results, data.frame(Fold = i, RMSE = rmse_value))
+    }
+
+    # Calculate the average performance across all folds
+    average_performance <- mean(results$RMSE)
+    return(average_performance)
+}
+
+overdue30to89 <- credit_card.overdue_3089(TRUE, TRUE)
+overdue30to89.group <- credit_card.overdue30to89.agg.group(TRUE,TRUE)
+
+loan_amt_pct_change <- credit_card.loan_amount(TRUE,TRUE) |> group_by(BankName) |> mutate(pct_change = value_diff/lag(Value) *100) |>as_tibble() |>select(Quarter,BankName,loan_amt.pct_change = pct_change)
+loan_unused_pct_change <- credit_card.unused(TRUE,TRUE) |> group_by(BankName) |> mutate(pct_change = value_diff/lag(Value) *100) |> as_tibble() |>select(Quarter,BankName,loan_unused.pct_change = pct_change)
+
+
+event_duration <- 5 # 2 quarters - current + 1
+est_duration <- 8
+partner_data <- credit_card.partnerships() |> 
+                    pivot_longer(cols = c('old','new'), names_to = "partnership", values_to = "BankName") |> 
+                    mutate(across(c("acquired", "available"), lubridate::ymd))  |>
+                    left_join(overdue30to89, relationship = "many-to-many", by = join_by(BankName)) |> 
+                    left_join(loan_amt_pct_change) |>
+                    left_join(loan_unused_pct_change) |>
+                    mutate( Period = Quarter - yearquarter(acquired),
+                            EventPeriod = (Period >= 0 & Period < event_duration),
+                            EstimationPeriod = (Period < 0 & Period >= -est_duration),
+                            Qtr = quarter(Quarter)) |> 
+                    left_join(overdue30to89.group, by = join_by(BankType, Quarter)) |>
+                    drop_na(value_diff) |> rename(partner_name = name)
 
 exog_us_economic_qtr <- us_economy() |>
                         mutate(RRSFS.Pop = RRSFS/POPTHM,                      
                                Quarter = yearquarter(Month)) |>
                         index_by(Quarter) |>
-                        select(RRSFS.Pop, UNRATE) |>
+                        dplyr::select(RRSFS.Pop, UNRATE) |>
                         summarise(across(-Month, mean)) |>
                         mutate(across(-Quarter, ~difference(.))) |>
                         mutate(RRSFS.Pop.lag1 = lag(RRSFS.Pop),
                                UNRATE.lag1  = lag(UNRATE)) |>
-                        filter_index(get_regulation_cutoff() ~ .)                          
+                        filter_index(get_regulation_cutoff() ~ .)   
+
+estimation_data <- partner_data |> 
+                    filter(EstimationPeriod == TRUE) |> 
+                    add_row(overdue30to89 |> filter(!BankName %in% partner_data$BankName) |>
+                                left_join(loan_amt_pct_change, by = join_by(BankName, Quarter)) |>
+                                left_join(loan_unused_pct_change, by = join_by(BankName, Quarter)) |>
+                                left_join(overdue30to89.group, by = join_by(BankType, Quarter)))|>
+                    mutate( #value_diff.detrend = value_diff - value_diff.group.mean,
+                            #partner_event = !is.na(name),
+                            EstimationPeriod = TRUE,
+                            Qtr = quarter(Quarter)) |>
+                            #Year = year(Quarter)) |> 
+                    drop_na(value_diff) 
+
+bank_mean <- estimation_data |> 
+                group_by(BankName) |> summarise(value_diff.est.mean = mean(value_diff,na.rm=TRUE))
+
+results <- tibble(model = character(),
+                    rsme = numeric())
+
+market_formula <- "value_diff ~ value_diff.group.mean"
+fixed_formula <- "value_diff ~ Qtr + factor(BankType)"
+mixed_formula <- "value_diff ~ Qtr * BankType + (1 | IDRSSD)"
+hier_formula <- "value_diff ~ Qtr * BankType + (1 | BankType/IDRSSD) + loan_amt.pct_change"
+# Fit the models
+m_market <- lm(as.formula(market_formula), data = estimation_data)
+m_fixed <- lm(as.formula(fixed_formula), data = estimation_data)
+m_mixed <- lm(as.formula(mixed_formula), data = estimation_data)
+m_hier <- lmer(as.formula(hier_formula), data = estimation_data)
+summary(m_hier)
+coef(m_hier)
+
+# Predict normal returns for the event window
+event_data <- partner_data |> filter(EventPeriod == TRUE)
+
+augmented_data <- event_data |>
+                left_join(bank_mean) |>
+                mutate(AR_mean = value_diff - value_diff.est.mean,
+                AR_group = value_diff - value_diff.group.mean,
+                m_market.preds = predict(m_market, newdata = event_data),
+                m_fixed.preds = predict(m_fixed, newdata = event_data),
+                m_mixed.preds = predict(m_mixed, newdata = event_data),
+                m_hier.preds = predict(m_hier, newdata = event_data),
+                m_market.AR = value_diff - m_market.preds,
+                m_fixed.AR = value_diff - m_fixed.preds,
+                m_mixed.AR = value_diff - m_mixed.preds,
+                m_hier.AR = value_diff - m_hier.preds) |>
+                add_row(estimation_data)
 
 
-deliquent_data <- credit_card.overdue_3089(apply_bank_filters = TRUE, post_regulation = TRUE) |> left_join(exog_us_economic_qtr, by = join_by(Quarter)) |> na.omit(value_diff)
+augmented_data |> 
+    filter(!is.na(partner_name)) |> 
+        select(Period,acquired,partner_name, partnership, BankName, value_diff,  m_market.preds,m_fixed.preds,m_hier.preds, m_mixed.preds,value_diff.est.mean) |>
+            pivot_longer(cols = 6:last_col()) |>
+                ggplot(aes(x = Period, y = value, colour = name)) +
+                    geom_line() + 
+                    geom_vline(xintercept = 0, linetype=4) +
+                    facet_wrap(~partner_name+partnership+BankName, ncol=2) + scale_x_continuous(breaks = -10:3) +scale_colour_colorblind7() 
+                    
 
-deliquent_data_agg <- deliquent_data |> 
-            aggregate_key(BankType, value_diff.mean = mean(value_diff, na.rm = TRUE)) |>
-            summarise(value_diff.mean = mean(value_diff, na.rm = TRUE),
-                      value_diff.median = median(value_diff, na.rm = TRUE)
-                      ) |> na.omit(value_diff.mean)
+augmented_data |> filter(!is.na(partner_name), Period >=0) |> 
+select(Period,partner_name, partnership, BankName, AR_mean, AR_group,m_hier.AR,m_fixed.AR, m_mixed.AR, m_market.AR) |>
+pivot_longer(cols = contains("AR", ignore.case=FALSE)) |>
+ggplot(aes(x = Period, y = value, colour = name)) +
+    geom_line() + geom_vline(xintercept = 0, linetype=4) +
+                    facet_wrap(~partner_name+partnership+BankName, ncol=2) +
+                    scale_colour_colorblind7() + scale_x_continuous(breaks = 0:3)
 
-fit <- deliquent_data |> 
-            aggregate_key(BankType, value_diff.mean = mean(value_diff, na.rm = TRUE)) |>
-            model(arima_rrsfs_unrate = ARIMA(value_diff.mean ~ 1 + RRSFS.Pop.mean + RRSFS.Pop.lag1.mean + UNRATE.mean + UNRATE.lag1.mean)) |>
-              reconcile(bu = bottom_up(arima_rrsfs_unrate))
+results |> 
+    add_row(model="Market", rsme = run_kfold_validation(estimation_data, market_formula)) |>
+    add_row(model="Fixed", rsme = run_kfold_validation(estimation_data, fixed_formula)) |>
+    add_row(model="Mixed", rsme = run_kfold_validation(estimation_data, mixed_formula)) |>
+    add_row(model="Hierarchy", rsme = run_kfold_validation(estimation_data, hier_formula, lmer)) 
 
-  
+estimation_data |> View()
 
-
-augmented_data <- fit |>
-                    augment()
-
-augmented_data |> select(value_diff.mean, .fitted) |> pivot_longer(cols = c(value_diff.mean, .fitted)) |> autoplot(value,aes(colour = name)) + facet_wrap(~BankType, ncol = 1, scales = "free_y") 
-
-data |> aggregate_key() |> model() |>
-  reconcile() |> forecast()
-
-#each group has Trend + Seasonality
-deliquent_data_agg |> 
-  select(value_diff.mean, value_diff.median) |> 
-    pivot_longer(cols = !c(BankType,Quarter)) |> autoplot(value,aes(colour = name)) + facet_wrap(~BankType, ncol = 1, scales = "free_y") + theme(legend.position = "top", legend.title = element_blank())
-
-portfolio_data <- deliquent_data |> 
-                    left_join(deliquent_data_agg, by = join_by(BankType, Quarter)) |> 
-                      mutate(value_diff_portfolio.mean = value_diff - value_diff.mean,
-                             value_diff_portfolio.median =  value_diff - value_diff.median)
-
-portfolio_data |> filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") |> 
-  select(BankType,value_diff,value_diff.mean, value_diff_portfolio.mean ) |>
-  pivot_longer(cols = !c(BankType,Quarter)) |> autoplot(value,aes(colour = name)) + facet_wrap(~BankType, ncol = 1, scales = "free_y") + theme(legend.position = "top", legend.title = element_blank())
-
-portfolio_data |> filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") |> 
-  ggplot(aes(x = Quarter, y = value_diff_portfolio.median)) +
-  geom_point() +  # Add points
-  geom_smooth(method = "loess", color = "red")
-
-first_value <-portfolio_data |> filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") |> pluck(value_diff_portfolio.median)
-
-barclays_series_diff <- portfolio_data |> filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") 
-# Reverse the differencing
-reconstructed_series <- barclays_series_diff$value_diff_portfolio.median[1] + cumsum(barclays_series_diff$value_diff_portfolio.median)
-
-barclays_series_diff <- barclays_series_diff |> add_column(reconstruct_val = reconstructed_series)
-barclays_series_diff |> autoplot(reconstruct_val)
-
-value_col <- "value_diff_portfolio.median"
-value_col <- "reconstruct_val"
-threshold <- 0.5
-prophet_model <- barclays_series_diff |> 
-                  select(ds = Quarter,y = !!value_col) |> as_tibble() |> mutate(ds = yq(ds+1)-1) |>  prophet::prophet(changepoint.range = 0.99,changepoint.prior.scale = threshold)
-
-future <- prophet::make_future_dataframe(prophet_model, periods = 1)
-fcst <- predict(prophet_model, future)
-
-date_acquired <- credit_card.partnerships() |> filter(new =="BARCLAYS BANK DELAWARE (2980209)") |> pull(acquired)
-
-plot(prophet_model, fcst) + prophet::add_changepoints_to_plot(prophet_model) 
-
-prophet_model$changepoints[abs(prophet_model$params$delta) >= 0.01]
-
-barclays_plot$layers <- append(barclays_plot$layers,geom_vline(xintercept = integer(as.Date(date_acquired)), linetype=1,colour="black"))
-
-barclays_plot$layers        
-barclays_plot
- 
-fit_agg <- deliquent_data_agg |> 
-              model(
-                  stl = STL(value_diff.mean),
-                  ets = ETS(value_diff.mean ~ trend("A")),
-                  arima = ARIMA(value_diff.mean),
-                  arima_rrsfs = ARIMA(value_diff.mean ~ 1 + RRSFS.Pop.mean + RRSFS.Pop.lag1.mean),
-                  arima_rrsfs_unrate = ARIMA(value_diff.mean ~ 1 + RRSFS.Pop.mean + RRSFS.Pop.lag1.mean + UNRATE.mean + UNRATE.lag1.mean)
-              )
-
-augmented_agg_data <- fit_agg |>
-                    augment()       
+results |> 
+    add_row(model="Market", rsme = run_kfold_validation(estimation_data, market_formula)) |>
+    add_row(model = "Market_TS", rsme = run_timeseries_cv(estimation_data, market_formula, initial_window = 20))
 
 
-augmented_agg_data |>  
-    autoplot(.fitted, aes(colour = .model)) + 
-        theme(legend.position = "top") + facet_wrap(~ BankType, scales = "free_y", ncol=2) +
-        geom_line(mapping = aes(y = value_diff.mean), data = augmented_agg_data,
-                  colour = 'darkslategrey')                    
+```
+
+```{r}
+lmer1_formula <- "value_diff  ~ (1 | IDRSSD) + value_diff.group.mean"
+result <- run_timeseries_cv(estimation_data, lmer1_formula, model_func = lmer)
+result_fixed <- run_timeseries_cv(estimation_data, lmer1_formula, model_func = lmer)
 
 
-fit_agg |>
-  select(-stl) |>
-  glance() |> View()
-#########################
+results |> 
+    add_row(model="IMER", rsme = run_kfold_validation(estimation_data, lmer1_formula)) |>
+    add_row(model = "IMER_TS", rsme = run_timeseries_cv(estimation_data, lmer1_formula, model_func = lmer)$OverallMeanRMSE)
 
-fit <- deliquent_data|> 
-        model(
-            stl = STL(value_diff),
-            ets = ETS(value_diff ~ trend("A")),
-            arima = ARIMA(value_diff),
-            arima_rrsfs = ARIMA(value_diff ~ 1 + RRSFS.Pop + RRSFS.Pop.lag1),
-            arima_rrsfs_unrate = ARIMA(value_diff ~ 1 + RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1)
-        )
+data =estimation_data
+formula_string = lmer1_formula
+model_func = lmer
+```
+# non_partership_banks <- bank_data |> filter(is.na(name))
+# partership_banks <- bank_data |> filter(!is.na(name))
 
-fit |> View()
+# results <- tibble(model = character(),
+#                     rsme = numeric())
 
-fit |>
-  glance() 
+# lmer1_formula <- "value_diff  ~ Qtr + RRSFS.Pop + RRSFS.Pop.lag1 + (1 | IDRSSD)"
+# lmer2_formula <- "value_diff  ~ Qtr + RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (1 | IDRSSD)"
+# lmer3_formula <- "value_diff  ~ Qtr + RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (1 | BankType/IDRSSD)"
+# lmer4_formula <- "value_diff  ~ Qtr + (1 | BankType/IDRSSD) + BankType"
+# lmer5_formula <- "value_diff  ~ Qtr + value_diff.group.mean + (1 | IDRSSD)"
+# lmer6_formula <- "value_diff  ~ Qtr + value_diff.group.mean + (1 | BankType)"
+# lmer7_formula <- "value_diff  ~ Qtr + value_diff.median + (1 | BankType)"
+# lmer8_formula <- "value_diff  ~ Qtr + value_diff.group.mean + (1 | IDRSSD) + RRSFS.Pop + RRSFS.Pop.lag1"
+# lmer9_formula <- "value_diff.detrend  ~ RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (1 | IDRSSD)"
 
-fit |>
-  select(BankType, BankName, arima_rrsfs) |>
-  coef() |> View()
+# arima1_formula <- "value_diff ~ 1 + RRSFS.Pop.mean + RRSFS.Pop.lag1.mean + UNRATE.mean + UNRATE.lag1.mean"
 
-fit |>
-  filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") |>
-  select(arima) |>
-  report() 
+# results |>
+# add_row(model="LMER1", rsme =run_kfold_validation(non_partership_banks, lmer1_formula)) |>
+# add_row(model="LMER2", rsme =run_kfold_validation(non_partership_banks, lmer2_formula)) |> 
+# add_row(model="LMER3", rsme =run_kfold_validation(non_partership_banks, lmer3_formula)) |>
+# add_row(model="LMER4", rsme =run_kfold_validation(non_partership_banks, lmer4_formula)) |>
+# add_row(model="LMER5", rsme =run_kfold_validation(non_partership_banks, lmer5_formula)) |>
+# add_row(model="LMER6", rsme =run_kfold_validation(non_partership_banks, lmer6_formula)) |>
+# add_row(model="LMER7", rsme =run_kfold_validation(non_partership_banks, lmer7_formula)) |>
+# add_row(model="LMER7", rsme =run_kfold_validation(non_partership_banks, lmer8_formula))|>
+# add_row(model="LMER7", rsme =run_kfold_validation(non_partership_banks, lmer9_formula))
+# add_row(model="ARIMA7", rsme =run_kfold_validation_arima(non_partership_banks, arima1_formula))
 
-augmented_data <- fit |>
-                    augment()
 
-augmented_data |> View()
+# best_model <- lmer(as.formula(lmer6_formula), data = non_partership_banks)
+# partership_banks$preds <- predict(best_model, newdata = partership_banks)
+# partership_banks$residuals <- partership_banks$value_diff - partership_banks$preds
+# # If you know the actual outcomes for the test data
+# test_rmse <- Metrics::rmse(partership_banks$value_diff, partership_banks$preds)
 
-augmented_data |>
-  ggplot(aes(x = .innov)) +
-  geom_histogram() +
-  labs(title = "Histogram of residuals")   
+# partership_banks |> 
+#     ggplot(aes(x = Quarter, y = value_diff, colour = EventPeriod)) +
+#     geom_line(aes(y = preds))+ #, color = "blue") +  # Predicted fit
+#     geom_point(aes(y = value_diff), color = "red", alpha = 0.5) +  # Observed data
+#     facet_wrap(~ partnership+name+BankName, scales = "free_x") +  # Separate plot for each firm
+#     labs(title = "Fitted Model for Each Firm", 
+#         x = "Date", 
+#         y = "value_diff")
 
-augmented_data |>  
-  filter(BankType == "LargeCreditCardBank") |>                 
-    autoplot(.fitted, aes(colour = .model)) + 
-        theme(legend.position = "top") + facet_wrap(~ BankName, scales = "free_y", ncol=2) +
-        geom_line(mapping = aes(y = value_diff), data = augmented_data |> filter(BankType == "LargeCreditCardBank"),
-                  colour = 'darkslategrey') 
+# ggplot(acs(x))
 
-augmented_data |>  
-  filter(BankType == "LargeCreditCardBank", .model == "arima_rrsfs_unrate") |>                 
-    autoplot(.innov, aes(colour = .model)) + 
-        theme(legend.position = "top") + facet_wrap(~ BankName, scales = "free_y", ncol=2) +
-        geom_line(mapping = aes(y = value_diff), data = augmented_data |> filter(BankType == "LargeCreditCardBank",.model == "arima_rrsfs_unrate"),
-                  colour = 'darkslategrey')   +
-        geom_line(mapping = aes(y = .fitted), data = augmented_data |> filter(BankType == "LargeCreditCardBank",.model == "arima_rrsfs_unrate"),
-                  colour = 'lightgreen')                                      
+# plot(test_preds, residuals, main="Residuals vs Predicted", xlab="Predicted Values", ylab="Residuals")
+# abline(h=0, col="red")
+
+# #create Q-Q plot for residuals
+# qqnorm(residuals)
+# #add a straight diagonal line to the plot
+# qqline(residuals) 
+# plot(density(partership_banks$residuals))
+# plot(density(partership_banks |> filter(EventPeriod == FALSE) |> pull(residuals)))
+# plot(density(partership_banks |> filter(EventPeriod == TRUE) |> pull(residuals)))
+
+
+
+
+# bank_data |> View() 
+# library(lme4)
+# library(splines)
+
+# quarter(yearquarter("2010 Q2"))
+
+# m <- lmer(value_diff.detrend  ~ Qtr + (1 | BankType/IDRSSD) + BankType+ EventPeriod + (EventPeriod | IDRSSD), data = bank_data)
+
+# m <- lmer(value_diff  ~ Qtr + value_diff.group.mean +  (EventPeriod | IDRSSD), data = bank_data)
+
+# m <- lmer(value_diff  ~ Qtr + RRSFS.Pop+RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (EventPeriod | IDRSSD), data = bank_data)
+
+# fit_consMR <- bank_data |> as_tsibble(key=c(BankName,name, partnership), index=Quarter) |>
+#                 fabletools::model(tslm = TSLM(value_diff  ~ Qtr + (1 | IDRSSD) + value_diff.group.mean+ RRSFS.Pop+RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (EventPeriod | IDRSSD)))
+
+
+# augmented_data <- fit_consMR |>filter(!is.na(name)) |>
+#                      augment()
+
+# augmented_data |>
+#   ggplot(aes(x = Quarter)) +
+#   geom_line(aes(y = value_diff, colour = "Data")) +
+#   geom_line(aes(y = .fitted, colour = "Fitted")) +
+#   facet_wrap(~ partnership+name+BankName, scales = "free_x") +
+#   labs(y = NULL,
+#     title = "Percent change in US consumption expenditure"
+#   ) +
+#   scale_colour_manual(values=c(Data="black",Fitted="#D55E00")) +
+#   guides(colour = guide_legend(title = NULL)) 
+
+# summary(m)
+# bank_data$yhat <- predict(m, re.form = NULL)  # re.form = NULL to include random effects
+
+# subset(bank_data, partner_event == 1) |>
+#     ggplot(aes(x = Quarter, y = value_diff, colour = EventPeriod)) +
+#     geom_line(aes(y = yhat))+ #, color = "blue") +  # Predicted fit
+#     geom_point(aes(y = value_diff), color = "red", alpha = 0.5) +  # Observed data
+#     facet_wrap(~ partnership+name+BankName, scales = "free_x") +  # Separate plot for each firm
+#     labs(title = "Fitted Model for Each Firm", 
+#         x = "Date", 
+#         y = "Return")
+
+
+    
         
-augmented_data |>  
-  filter(BankType == "LargeBank") |>                 
-    autoplot(.innov) + 
-        theme(legend.position = "top") + facet_wrap(~ BankName, scales = "free", ncol=4) + theme(legend.position = "top")
-```
 
 
+# # Estimate And observation data
+# est_data <- bank_data |> filter(between(Period, -6, -1))
+# obs_data <- bank_data |> filter(between(Period, 0, 5)) 
+
+# m_recipe <- recipe(bank_data) |>
+#   update_role(everything(), new_role = "support") |> 
+#   update_role(value_diff.Bank, new_role = "outcome") |>
+#   update_role(value_diff.Agg, partnership, new_role = "predictor") |>
+#   step_dummy(partnership, one_hot=T)
+
+# # obs_data <- m_recipe |>
+# #             prep(obs_data) |>
+# #             bake(obs_data)
+
+# m_model <- linear_reg() |> set_engine("lm")
+
+# m_workflow <- workflow() |>
+#                 add_recipe(m_recipe) |>
+#                 add_model(m_model)
+
+# m_fitted <- m_workflow |> fit(est_data)
+
+# y_hat <- m_fitted |> predict(obs_data)
+
+#   #metric_set(rmse, mae, rsq)(obs_data$value_diff.Bank, .pred)
 
 
-```{r}
-#https://cran.r-project.org/web/packages/fable/vignettes/fable.html
-source('functions.R')
+# #https://mdneuzerling.com/post/machine-learning-pipelines-with-tidymodels-and-targets/
+# #In the observation period, subtract the prediction from the actual return to get the “abnormal return.” 
+# obs_data_ar <- bind_cols(obs_data, y_hat) |>
+#     # Using mean of estimation return
+#     mutate(
+#         #mean = value_diff.Bank - mean(est_data$value_diff.Bank),
+#         # Then comparing to peers
+#         #peers = value_diff.Bank - value_diff.Agg,
+#         # Then using model fit with estimation data
+#         Predicted = .pred,
+#         "Actual-Predicted" = value_diff.Bank - .pred)
 
-na_post_partner_data <- function(bank_data, event_start, event_end) {
-    bank_data |> select(Quarter ~)
-}
+# #put predictions and predictions together for visualisation
+# actual <- bank_data |> 
+#     filter(between(Period, -6, 5)) |> 
+#     select(Period, partner_event = name, BankName, partnership, Actual=value_diff.Bank) 
+   
+# predict <- obs_data_ar |> 
+#     select(Period, partner_event = name, BankName, partnership, Predicted) 
+    
+# actual |> left_join(predict) |>
+# as_tsibble(index=Period, key=c(partner_event, BankName)) |>
+# pivot_longer(cols=c(Actual,Predicted), names_to = "Values") |> 
+#     autoplot(value,aes(color = Values)) + facet_grid(partnership ~ partner_event) +
+#     theme(legend.position = "top")
 
-new_partners <- credit_card.partnerships() |> select(new,acquired,available)
+# ```
 
-all_data <- credit_card.overdue_3089(TRUE, TRUE) |> 
-                    right_join(new_partners, join_by(BankName==new))|> 
-                    na.omit() |>
-                    as_tibble() |> 
-                    mutate(Event = ifelse(Quarter >= yearquarter(as.Date(acquired)) & 
-                                           Quarter <= yearquarter(as.Date(available))+1, TRUE, FALSE)) |> 
-                        as_tsibble(index = Quarter, key = c(BankType,BankName))
+# ##Evaluating the model
+   
+# The idea is this: when there’s supposed to be an effect, and we test for an effect, we can’t tease apart what part of our findings is the effect, and what part is the counterfactual model being wrong. But what if we knew there were no effect? Then, anything we estimated could only be the counterfactual model being wrong. So if we got an effect under those conditions, we’d know our model was fishy and would have to try something else.
 
+# So, get a bunch of different time series to test, especially those unaffected by the event. In the context of stock returns, for example, don’t just include the firm with the great announcement on a certain day, also include stocks for a bunch of other firms that had no announcement.
 
-training_data <- all_data |>
-                    filter(Event == FALSE) |>
-                    fill_gaps()
+# Then, start doing your event study over and over again. Except each time you do it, pick a random time series to do it on, and pick a random day when the “event” is supposed to have happened.21
+# ```{r}
+# selected_measure |>
+#     as_tibble() |>
+#     filter(LargeBank==1|LargeCreditCardBank==1) |>
+#     left_join(partners, relationship = "many-to-many") |>
+#     rename(value_diff.Bank = value_diff) |>
+#     mutate(Period = Quarter - yearquarter(acquired)) 
 
-training_data |>                    
-    autoplot(value_diff) + 
-        theme(legend.position = "top") + facet_wrap(~BankName+BankType, ncol=1)          
-
-fit <- training_data |> 
-        model(
-            arima = ARIMA(value_diff)
-        )
-
-fit
-
-fit |>
-  glance()
-
-fit |>
-  select(BankType, BankName, arima) |>
-  coef() |> View()
-
-fit |>
-  filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") |>
-  select(arima) |>
-  report() 
-  #gg_tsresiduals() 
-
-aug <- fit |> augment() 
-
-aug|>
-  ggplot(aes(x = .innov)) +
-  geom_histogram() +
-  labs(title = "Histogram of residuals")
-
-aug |>
-  ACF(.innov) |>
-  autoplot() +
-  labs(title = "ACF Residuals")
-
-fit |> 
-  accuracy() |> 
-  arrange(MASE) |> View()
-
-filled_data <- fit |>
-                interpolate(training_data) 
-
-#############
-sim <- fit |> generate(h = 4, times = 5, bootstrap = TRUE, times = 5000) |> na.omit()         
-sim |> View()
-
-
-all_data |>
-  ggplot(aes(x = Quarter)) +
-  geom_line(aes(y = value_diff)) +
-  geom_line(aes(y = .sim, colour = as.factor(.rep)),
-    data = sim)+facet_wrap(~BankName+BankType, ncol=1)+guides(colour = "none")
-
-fc <- fit |> forecast(h = 4, bootstrap = TRUE)
-autoplot(fc, all_data)
-############
-
-only_filled_data <- filled_data |> left_join(all_data |> filter(Event == TRUE))
-
-all_data |>
-autoplot(value_diff)+
-autolayer(only_filled_data,value_diff, colour="darkslategrey")+ theme(legend.position = "none") + facet_wrap(~BankName+BankType, ncol=1)
-
-
-
-
- geom_line(mapping = aes(y = !!as.name(target_measure)), data = target_data,
-                  colour = 'darkslategrey') +
-
-# Forecast for the event period and beyond
-forecast_period <- training_data |> filter(is.na(value_diff))
-fit_test <- refit(fit, tail(us_accidental_deaths, 24), reestimate = FALSE)
-accuracy(fit_test)
-fc <- fit |> 
-  forecast(new_data = forecast_period)
-fc
-
-fc |> 
-  hilo(level = c(80, 95))
-
-fc |> 
-  autoplot(bank_data)
-```
-
-```{r}
-library(fable)
-library(tsibble)
-library(dplyr)
-
-# Sample data (replace this with your actual time series data)
-# Assuming a time series with monthly data
-set.seed(123)  # For reproducibility
-dates <- seq(as.Date("2020-01-01"), by = "month", length.out = 36)
-values <- rnorm(36, 100, 10)
-your_data <- tibble(date = dates, value = values) %>% as_tsibble(index = date)
-
-# Walk-forward validation
-# Setting the initial training size and the forecast horizon
-initial_train_size <- 24  # For example, first 24 months
-forecast_horizon <- 1     # Forecast 1 month ahead
-
-results <- vector("list", length = length(your_data) - initial_train_size)
-
-for(i in seq_len(length(results))) {
-  # Train-test split
-  train_data <- your_data %>% slice(1:(initial_train_size + i - 1))
-  test_data <- your_data %>% slice((initial_train_size + i):(initial_train_size + i + forecast_horizon - 1))
-  
-  # Fit the model
-  fit <- train_data %>% model(ARIMA(value))
-  
-  # Forecast
-  forecast_result <- forecast(fit, new_data = test_data)
-  
-  # Store results
-  results[[i]] <- forecast_result
-}
-
-# Combine results
-combined_results <- bind_rows(results)
-
-# Evaluate performance, e.g., using MAE (Mean Absolute Error)
-accuracy_metrics <- combined_results %>% accuracy(your_data)
-mae <- accuracy_metrics$MAE
-
-print(mae)
-```
+# ```
