--- a/model_event.qmd
+++ b/model_event.qmd
@@ -137,70 +137,61 @@ run_kfold_validation <- function(data, formula_string,model_func = lm, predict_f
     return(average_performance)
 }
 
-overdue30to89 <- credit_card.overdue_3089(TRUE, TRUE)
-overdue30to89.group <- credit_card.overdue30to89.agg.group(TRUE,TRUE)
+data <- get_model_data() |> drop_na(UBPRE524.diff)
 
-loan_amt_pct_change <- credit_card.loan_amount(TRUE,TRUE) |> group_by(BankName) |> mutate(pct_change = value_diff/lag(Value) *100) |>as_tibble() |>select(Quarter,BankName,loan_amt.pct_change = pct_change)
-loan_unused_pct_change <- credit_card.unused(TRUE,TRUE) |> group_by(BankName) |> mutate(pct_change = value_diff/lag(Value) *100) |> as_tibble() |>select(Quarter,BankName,loan_unused.pct_change = pct_change)
-
-
-event_duration <- 5 # 2 quarters - current + 1
-est_duration <- 8
-partner_data <- credit_card.partnerships() |> 
-                    pivot_longer(cols = c('old','new'), names_to = "partnership", values_to = "BankName") |> 
-                    mutate(across(c("acquired", "available"), lubridate::ymd))  |>
-                    left_join(overdue30to89, relationship = "many-to-many", by = join_by(BankName)) |> 
-                    left_join(loan_amt_pct_change) |>
-                    left_join(loan_unused_pct_change) |>
-                    mutate( Period = Quarter - yearquarter(acquired),
-                            EventPeriod = (Period >= 0 & Period < event_duration),
-                            EstimationPeriod = (Period < 0 & Period >= -est_duration),
-                            Qtr = quarter(Quarter)) |> 
-                    left_join(overdue30to89.group, by = join_by(BankType, Quarter)) |>
-                    drop_na(value_diff) |> rename(partner_name = name)
-
-exog_us_economic_qtr <- us_economy() |>
-                        mutate(RRSFS.Pop = RRSFS/POPTHM,                      
-                               Quarter = yearquarter(Month)) |>
-                        index_by(Quarter) |>
-                        dplyr::select(RRSFS.Pop, UNRATE) |>
-                        summarise(across(-Month, mean)) |>
-                        mutate(across(-Quarter, ~difference(.))) |>
-                        mutate(RRSFS.Pop.lag1 = lag(RRSFS.Pop),
-                               UNRATE.lag1  = lag(UNRATE)) |>
-                        filter_index(get_regulation_cutoff() ~ .)   
-
-estimation_data <- partner_data |> 
-                    filter(EstimationPeriod == TRUE) |> 
-                    add_row(overdue30to89 |> filter(!BankName %in% partner_data$BankName) |>
-                                left_join(loan_amt_pct_change, by = join_by(BankName, Quarter)) |>
-                                left_join(loan_unused_pct_change, by = join_by(BankName, Quarter)) |>
-                                left_join(overdue30to89.group, by = join_by(BankType, Quarter)))|>
-                    mutate( #value_diff.detrend = value_diff - value_diff.group.mean,
-                            #partner_event = !is.na(name),
-                            EstimationPeriod = TRUE,
-                            Qtr = quarter(Quarter)) |>
-                            #Year = year(Quarter)) |> 
-                    drop_na(value_diff) 
-
-bank_mean <- estimation_data |> 
-                group_by(BankName) |> summarise(value_diff.est.mean = mean(value_diff,na.rm=TRUE))
+estimation_data <- data |> filter(is.na(Partnership))
+event_data <- data |> filter(!is.na(Partnership))
 
 results <- tibble(model = character(),
                     rsme = numeric())
 
-market_formula <- "value_diff ~ value_diff.group.mean"
-fixed_formula <- "value_diff ~ Qtr + factor(BankType)"
-mixed_formula <- "value_diff ~ Qtr * BankType + (1 | IDRSSD)"
-hier_formula <- "value_diff ~ Qtr * BankType + (1 | BankType/IDRSSD) + loan_amt.pct_change"
+#estimation_data |> select(starts_with("UBPRE524")) |>View()
+
+market_formula <- "UBPRE524.diff ~ UBPRE524.group.diff"
+fixed_formula <- "UBPRE524.diff ~ BankType*factor(Quarter) + (1|BankName)"
+
+fixed_2way_formula <- "UBPRE524.diff ~  UBPRE524.group.diff | BankName + Quarter"
+mixed_formula <- "UBPRE524.diff ~ BankType + (1 | BankName)"
+hier_formula <- "UBPRE524.diff ~ BankType + (1 | BankType/IDRSSD) + UBPRE425.diff "
+
+
 # Fit the models
-m_market <- lm(as.formula(market_formula), data = estimation_data)
-m_fixed <- lm(as.formula(fixed_formula), data = estimation_data)
+m_market <- estimation_data |> model( lm = TSLM(as.formula(market_formula)))
+
+fit <- estimation_data |> 
+                model( lm = TSLM(UBPRE524.diff ~ UBPRE524.group.diff + trend() + season()))
+
+forecast(fit, newdata = event_data)
+
+event_data |> select(UBPRE524.group.diff)
+
+augmented_data <- fit |>
+                    augment()
+
+
+RMSE(augmented_data$.fitted, augmented_data$.innov)
+
+estimation_data |>
+    autoplot(UBPRE524.diff) + 
+    geom_line(data= fitted(m), aes(y = .fitted, colour = .model)) + facet_wrap(~BankName)
+
+m_fixed <- lmer(as.formula(fixed_formula), data = estimation_data)
+m_fixed2 <- feols(as.formula(fixed_2way_formula), data = estimation_data)
 m_mixed <- lm(as.formula(mixed_formula), data = estimation_data)
 m_hier <- lmer(as.formula(hier_formula), data = estimation_data)
-summary(m_hier)
-coef(m_hier)
+summary(m_fixed2)
+coef(m_fixed2)
 
+feols(lifeExp ~ log(gdpPercap) | country + year,
+             data = gm)
+
+AIC(logLik(m_fixed))
+AIC(m_fixed2)
+BIC(m_fixed2)
+
+
+install.packages("fixest")
+library(fixest)
 # Predict normal returns for the event window
 event_data <- partner_data |> filter(EventPeriod == TRUE)
 
